--- a/src/app/static/namespace.html
+++ b/src/app/static/namespace.html
@@ -17,7 +17,7 @@
       <div class="actions header-right">
         <a id="view-manifests" class="button" href="#" target="_blank">📄 View Manifests</a>
         <a id="dl-manifests" class="button" href="#">⬇️ Download Manifests</a>
-        <a id="help-btn" class="button" href="#" title="How to use this page">❔ Help</a>
+        <a id="help-btn" class="button" href="#" title="How to use this page" aria-label="Help">ℹ️</a>
         <a href="#" class="button" data-role="theme-toggle">🌓 Theme</a>
       </div>
     </header>
