--- a/src/app/static/index.html
+++ b/src/app/static/index.html
@@ -12,6 +12,7 @@
     <header>
       <div class="header-left">
         <h1>🧰 web-k8s-backupper</h1>
+        <nav class="breadcrumbs" aria-label="Breadcrumbs"><span class="current">🗺️ Namespaces</span></nav>
       </div>
       <div class="actions header-right">
         <a id="help-btn" class="button" href="#" title="Help" aria-label="Help">ℹ️</a>
